[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "biomutant"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "zeyus", email = "dev@zeyus.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "click",
  "streamlit",
  "pandas",
  "numpy",
  "watchdog",
  "pycellbase",
]

[project.urls]
Documentation = "https://github.com/zeyus/BioMutant#readme"
Issues = "https://github.com/zeyus/BioMutant/issues"
Source = "https://github.com/zeyus/BioMutant"

[project.scripts]
biomutant-cli = "biomutant.cli:biomutant"
biomutant = "biomutant.app.entrypoint:main"

[tool.hatch.version]
path = "src/biomutant/__about__.py"

[tool.hatch.envs.default]
# path = ".hatch/envs/default"
installer = "uv"

[tool.hatch.envs.default.env-vars]


[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]

[tool.hatch.envs.hatch-test.extra-scripts]
pip = "{env:HATCH_UV} pip {args}"

[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/biomutant tests}"

[tool.coverage.run]
source_pkgs = ["biomutant", "tests"]
branch = true
parallel = true
omit = [
  "src/biomutant/__about__.py",
]

[tool.coverage.paths]
biomutant = ["src/biomutant", "*/biomutant/src/biomutant"]
tests = ["tests", "*/biomutant/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
